--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
 <meta  charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SuperShot - Creative HTML Template</title> 
+<title>Nityanand Nursing Home - Doctors</title> 
 
 <!-- Favicons -->
 
