--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 				      						
 				      						<li><i class="fas fa-check-circle"></i> Op Treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Pacemaker Implantation Surgery</li>
-				      						<li><i class="fas fa-check-circle"></i> Parkinson's Disease Treatment/li>
+				      						<li><i class="fas fa-check-circle"></i> Parkinson's Disease Treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Peptic And Gastric Ulcer Treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Peripheral Vascular Disease</li>
 				      						<li><i class="fas fa-check-circle"></i> Physician</li>
@@ -333,11 +333,11 @@
 				      						<li><i class="fas fa-check-circle"></i> Rheumatoid Arthritis Treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Rheumatology</li>
 				      						<li><i class="fas fa-check-circle"></i> Sexology</li>
-				      						<li><i class="fas fa-check-circle"></i> Sexually Transmited Disease Treatment</li>
+				      						<li><i class="fas fa-check-circle"></i> Sexually Transmited Disease<br>Treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Sinusitis treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Sleep Disorder Treatment</li>
 				      						<li><i class="fas fa-check-circle"></i> Sleep Study</li>
-				      						<li><i class="fas fa-check-circle"></i> Specialty Diagnostics in Tuberculosis</li>
+				      						<li><i class="fas fa-check-circle"></i> Specialty Diagnostics in <br>Tuberculosis</li>
 				      						<li><i class="fas fa-check-circle"></i> Spinal Disorders</li>
 				      						<li><i class="fas fa-check-circle"></i> Stress Management Counseling</li>
 				      						<li><i class="fas fa-check-circle"></i> Stress Managment Treatment</li>
