--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta  charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nityanand Nursing Home</title> 
+<title>Dr.Sameeran J Upasani in Kalyan West, Thane, Mumbai - Nityanand Nursing Home</title> 
 
 <!-- Favicons -->
 
