--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 				      	
 				      	<h2 style="text-align: center;">About&nbspUs</h2>
 				        	<div class="delimiter"><div></div></div>
+					      <br>
+				        	<p style="text-align: center;">Dr. Sameeran J Upasani in Kalyan West, Thane, Mumbai - Nityanand Nursing Home</p>
+				        	<br>
 				        	<p class="font-weight-normal" style="text-align: center; padding-right: 10px; padding-left: 10px; margin: 10px 10px 0">Among the finest General Physician Doctors in the city, Dr. Sameeran J Upasani in Kalyan West, Thane, Mumbai is known for offering excellent patient care. The clinic is located centrally in Kalyan West, a prominent locality in the city. It stands close to Near Jyoti Bakery which not only makes it convenient for people from the vicinity to consult the doctor but also for those from other neighbourhoods to seek medical guidance. There is no dearth of public modes of transport to reach the clinic from all major areas of the city.<br>Dr. Sameeran J Upasani in Kalyan West, Thane, Mumbai has a well-equipped clinic with all the modern equipment. The clinic has separate waiting and consultation areas which allow enough space for patients to wait conveniently at the clinic. Being a specialized General Physician Doctors, the doctor offers a number of medical services.
             </p>
 
